safeCode implemented, tests are passing