@@ -10,6 +10,7 @@ import java.io.StringReader;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -46,68 +47,30 @@ public class NativeDispatch {
     return nativeUrl.substring(0, space);
   }
   public static String untrusted(String nativeKind, String nativeUrl, List<String> xs, E e) {
-    //String[]parts=nativeUrl.split(":");
-    //examples of possible nativeUrl strings: 
-    //slaveName{}\n#1.foo(#2)
-    //slaveName{}\nReadFile.fileName(#1)
-    //slaveName{
-    //  timeLimit: xxx //all entries are optional
-    //  memoryLimit: xxx
-    //  classPath: xxx //if present will be the only path visible, thus no shared .class 
-    //  nativePath: xxx//will list *.so and *.dll stuff
-    //  }
-    //ReadFile.fileName(#1)
-    
-    //IF a slave with slaveName is already active (even if with different parameters), it is just
-    //reusing the current slave instance
-    //IF a slave with slaveName is not active (either never activated or died), it is creating
-    //and caching a new slave
-    
     //anything in nativeUrl after first occurrence of the token "}\n" can be turned in a lambda
     String toLambda="()->"+nativeUrl.substring(nativeUrl.indexOf("}\n")+2); 
     for(int i:range(xs)){//it might be just this simple
       toLambda=toLambda.replaceAll("#"+i, xs.get(i));
-      }
+    }
     String slaveName=nativeUrl.substring(0,nativeUrl.indexOf("{")).trim();
-    //TODO: refresh slave if slave has died. It might be easier to do that inside the library instead.
     Resources.slaves.computeIfAbsent(slaveName, sn->{
       String nativeData = nativeUrl.substring(nativeUrl.indexOf("{")+1, nativeUrl.indexOf("}")).trim();
       int timeLimit = Integer.parseInt(readSection(nativeData, "timeLimit:", "0"));
       int memoryLimit = Integer.parseInt(readSection(nativeData, "memoryLimit:", "0"));
-      String classPath="";
-      ClassLoader cl = ClassLoader.getPlatformClassLoader();
-      if(nativeUrl.contains("classPath:")){
-        //so we can test both ways
-        try {
-          classPath=new File(".").toPath().toUri().toURL().toString();
-        } catch (MalformedURLException e1) {
-          throw new RuntimeException(e1);
-        }
-        System.out.println(classPath);
-        classPath = readSection(nativeData, "classPath:", "");
-        cl = new URLClassLoader(Arrays.stream(classPath.split(";")).map(s-> {
-          try {
-            return new URL(s);
-          } catch (java.net.MalformedURLException ex) {
-            throw new RuntimeException(ex);
-          }
-        }).toArray(java.net.URL[]::new), null);
-      }
-      String[] args = new String[]{};
+      String[] args = new String[]{"--enable-preview"};
       if (memoryLimit > 0) {
-        args = new String[]{"-Xmx"+memoryLimit+"M"};
+        args = new String[]{"-Xmx"+memoryLimit+"M","--enable-preview"};
       }
-      return new ProcessSlave(timeLimit, args, cl);
+      return new ProcessSlave(timeLimit, args, ClassLoader.getPlatformClassLoader());
     });
-    return "try {"
-            + "return Resources.slaves.get(\""+slaveName+"\").call("+toLambda+").get();"
-            + "} catch (java.rmi.RemoteException ex) {"
-            + "throw new RuntimeException(ex);"
-            + "}";
-        
-    //return "return <YourMap>.of("+slaveName+","+toLambda+").get();";
-    //the of method may also handle exceptions in some reasonable way (Marco will handle this)
-    
+    return java.lang.String.format("""
+    try {
+      Resources.slaves.get("%s").addClassLoader(new Object() { }.getClass().getEnclosingClass().getClassLoader());
+      return Resources.slaves.get("%s").call(%s).get();
+    } catch (java.rmi.RemoteException ex) {
+        throw new RuntimeException(ex);
+    }
+    """, slaveName, slaveName, toLambda);   
   }
 
 enum TrustedKind {
